# python-postgress-dockerized

./: .env.example  .gitignore  README.md  docker-compose.yml
db-init/: user_table.sql
flask_postgress_app/: DockerFile  app.py  pyproject.toml
flask_postgress_app/db/: __init__.py  engine.py
flask_postgress_app/users/: __init__.py  views.py
